--- a/src/app/components/admin.dashboard/admin.dashboard.component.html
+++ b/src/app/components/admin.dashboard/admin.dashboard.component.html
@@ -1,7 +1,92 @@
 <h2 class="content-title">Dashboard</h2>
+<!-- Filtreleme Bölümü (Solda) -->
+<div>
+  <div class="d-flex flex-column flex-md-row justify-content-between align-items-center mb-3">
+    <div class="filter-container">
+      <button class="filter-toggle" (click)="toggleFilter()">
+        <i class="fa fa-filter"></i> Filtreler
+        <span *ngIf="filtersOpen" class="ms-1"><i class="fa fa-chevron-up"></i></span>
+        <span *ngIf="!filtersOpen" class="ms-1"><i class="fa fa-chevron-down"></i></span>
+      </button>
+    </div>
+    <div class="text-md-end mt-3 mt-md-0">
+      <div class="sorting-container">
+        <label for="sort-by" class="me-2">Sırala:</label>
+        <select [(ngModel)]="sortBy" (change)="onSortChange()" class="form-select d-inline-block w-auto">
+          <option value="id">ID</option>
+          <option value="baslik">Başlık</option>
+          <option value="pozisyonadi">Pozisyon</option>
+          <option value="bolumadi">Bölüm</option>
+        </select>
 
-<div class="admin-table-responsive">
-  <table class="table admin-table">
+        <button (click)="toggleIsDescending()" class="btn btn-secondary ms-2">
+          <i class="fa" [ngClass]="isDescending ? 'fa-arrow-down' : 'fa-arrow-up'"></i>
+          {{ isDescending ? 'Azalan' : 'Artan' }}
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <div class="filter-form" [class.open]="filtersOpen">
+    <div class="row">
+      <div class="col-md mb-3">
+        <label>Başlık:</label>
+        <input type="text" [(ngModel)]="filters.baslik" (input)="onFilterChange(filters)" class="form-control"
+          placeholder="Başlık ara..." />
+      </div>
+
+      <div class="col-md mb-3">
+        <label>Pozisyon:</label>
+        <select [(ngModel)]="filters.pozisyonId" (change)="onFilterChange(filters)" class="form-control">
+          <option [ngValue]="null">Seçiniz</option>
+          <option *ngFor="let pos of positions" [ngValue]="pos.id">{{ pos.ad }}</option>
+        </select>
+      </div>
+
+      <div class="col-md mb-3">
+        <label>Bölüm:</label>
+        <select [(ngModel)]="filters.bolumId" (change)="onFilterChange(filters)" class="form-control">
+          <option [ngValue]="null">Seçiniz</option>
+          <option *ngFor="let bol of bolums" [ngValue]="bol.id">{{ bol.ad }}</option>
+        </select>
+      </div>
+    </div>
+
+
+
+    <div class="row">
+      <div class="col-md">
+        <label>Durum:</label>
+        <select [(ngModel)]="filters.status" (change)="onFilterChange(filters)" class="form-control">
+          <option [ngValue]="null">Tümü</option>
+          <option [ngValue]="true">Aktif</option>
+          <option [ngValue]="false">Pasif</option>
+        </select>
+      </div>
+      <div class="col-md">
+        <label>İlan Tipi:</label>
+        <select [(ngModel)]="filters.ilanTipi" (change)="onFilterChange(filters)" class="form-control">
+          <option [ngValue]="null">Tümü</option>
+          <option [ngValue]="1">Aktif İlanlar</option>
+          <option [ngValue]="2">Geçmiş İlanlar</option>
+        </select>
+      </div>
+    </div>
+
+    <!-- Sıfırlama Butonu -->
+    <button (click)="resetFilters()" class="btn btn-secondary">
+      <i class="fa fa-refresh"></i> Filtreyi Sıfırla
+    </button>
+  </div>
+</div>
+
+<!-- Tablo Bölümü -->
+<div class="admin-table-responsive mt-3">
+  <div *ngIf="ilansModelObj.length === 0" class="alert alert-info">
+    Gösterilecek veri bulunamadı. Filtreleri değiştirerek tekrar deneyin.
+  </div>
+
+  <table *ngIf="ilansModelObj.length > 0" class="table admin-table">
     <thead>
       <tr>
         <th><i class="fas fa-eye"></i> İlan</th>
@@ -12,25 +97,31 @@
         <th scope="col"><i class="fa-solid fa-book"></i> Pozisyon</th>
         <th scope="col"><i class="fas fa-user"></i> Yükleyen</th>
         <th scope="col"><i class="fas fa-check-circle"></i> Durum</th>
-        <th scope="col"><i class="fas fa-tools"></i> İşlemler</th>
-        <th scope="col"></th>
-        <th scope="col"></th>
+        <th scope="col"><i class="fas fa-calendar"></i> İlan Tipi</th>
+        <th scope="col" colspan="3"><i class="fas fa-tools"></i> İşlemler</th>
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let item of ilansModelObj">
         <td>
           <a routerLink="/detail/{{item.id}}">
-          <button class="btn btn-sm btn-primary" >
-            <i class="fas fa-eye"></i>
-          </button></a>
+            <button class="btn btn-sm btn-primary">
+              <i class="fas fa-eye"></i>
+            </button>
+          </a>
         </td>
         <td><i class="fa-solid fa-hashtag"></i>{{ item.id }}</td>
         <td>{{ item.baslik | summary:15 }}</td>
         <td>{{ stripHtml(item.aciklama) | summary:30 }}</td>
-        <td>{{ item.bolum.ad }}</td>
-        <td>{{ item.pozisyon.ad }}</td>
-        <td><i class="fa-solid fa-hashtag"></i>{{ item.olusturan.id }} {{ item.olusturan.firstName }} {{ item.olusturan.lastName }}</td>
+        <td>{{ item.bolum.ad}}</td>
+        <td>{{ item.pozisyon.ad}}</td>
+        <td>
+          <span *ngIf="item.olusturan">
+            <i class="fa-solid fa-hashtag"></i>{{ item.olusturan.id }}
+            {{ item.olusturan.firstName }} {{ item.olusturan.lastName }}
+          </span>
+          <span *ngIf="!item.olusturan">Bilinmiyor</span>
+        </td>
         <td>
           <span [class]="item.status ? 'badge bg-success' : 'badge bg-secondary'">
             <i class="fas" [ngClass]="item.status ? 'fa-check-circle' : 'fa-times-circle'"></i>
@@ -38,25 +129,43 @@
           </span>
         </td>
         <td>
-          <button class="btn action-btn me-2 mt-2 mb-2 w-100" [ngClass]="item.status ? 'btn-danger' : 'btn-success'"
+          <span [ngClass]="getIlanTipiBadgeClass(item)">
+            <i class="fas fa-calendar"></i>
+            {{ getIlanTipiLabel(item) }}
+          </span>
+        </td>
+        <td>
+          <button class="btn action-btn" [ngClass]="item.status ? 'btn-danger' : 'btn-success'"
             (click)="item.status ? deactivate(item.id) : activate(item.id)">
             <i class="fas" [ngClass]="item.status ? 'fa-ban' : 'fa-check'"></i>
             {{ item.status ? 'Pasif Et' : 'Aktif Et' }}
           </button>
         </td>
         <td>
-          <button class="btn action-btn btn-warning me-2 mt-2 mb-2 w-100" (click)="edit(item.id)">
+          <button class="btn action-btn btn-warning" (click)="edit(item.id)">
             <i class="fa-solid fa-pen"></i> Düzenle
           </button>
         </td>
         <td>
-          <button class="btn btn-danger me-2 mt-2 mb-2 w-100" (click)="onDelete(item.id)">
+          <button class="btn btn-danger" (click)="onDelete(item.id)">
             <i class="fas fa-trash-alt"></i> Sil
           </button>
         </td>
       </tr>
     </tbody>
   </table>
+</div>
+
+<!-- Sayfalama Butonları -->
+<div *ngIf="ilansModelObj.length > 0" class="pagination-container mt-3">
+  <button (click)="onPageChange(pageNumber - 1)" [disabled]="pageNumber === 1" class="btn btn-primary-page">
+    <i class="fa fa-chevron-left"></i> Önceki
+  </button>
+  <span>Sayfa: {{ pageNumber }}</span>
+  <button (click)="onPageChange(pageNumber + 1)" [disabled]="ilansModelObj.length < pageSize"
+    class="btn btn-primary-page">
+    Sonraki <i class="fa fa-chevron-right"></i>
+  </button>
 </div>
 
 <!-- Düzenle Modal -->
@@ -66,49 +175,61 @@
       <div class="modal-header">
         <h5 class="modal-title" id="editModalLabel">İlan Düzenle</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-    </div>
-    <div class="modal-body">
-      <form (ngSubmit)="submitForm()">
-        <div class="form-group">
-          <label for="title">Başlık:</label>
-          <input type="text" id="title" [(ngModel)]="formData.baslik" name="title" required
-            placeholder="Buraya başlık yazın">
-        </div>
-        <div class="form-group">
-          <label for="description">Açıklama:</label>
-          <quill-editor [(ngModel)]="formData.aciklama" [modules]="editorConfig" name="description"
-            placeholder="Buraya açıklama yazın"></quill-editor>
-        </div>
-        <div class="form-row">
-          <div class="form-group">
-            <label for="position">Pozisyon:</label>
-            <select id="position" [(ngModel)]="formData.pozisyonId" name="position">
-          <option value="0" selected>Seçiniz</option>
-          <option *ngFor="let pos of positions" [value]="pos.id">{{ pos.ad }}</option>
-            </select>
+      </div>
+      <div class="modal-body">
+        <form (ngSubmit)="submitForm()">
+          <div class="form-group mb-3">
+            <label for="title">Başlık:</label>
+            <input type="text" id="title" [(ngModel)]="formData.baslik" name="title" required class="form-control"
+              placeholder="Buraya başlık yazın">
           </div>
-  
-          <div class="form-group">
-            <label for="department">Bölüm:</label>
-            <select id="department" [(ngModel)]="formData.bolumId" name="department">
-              <option value="0">Seçiniz</option>
-              <option *ngFor="let bol of bolums" [value]="bol.id">{{ bol.ad }}</option>
-            </select>
+          <div class="form-group mb-3">
+            <label for="description">Açıklama:</label>
+            <quill-editor [(ngModel)]="formData.aciklama" [modules]="editorConfig" name="description"
+              placeholder="Buraya açıklama yazın"></quill-editor>
           </div>
-        </div>
-        <div class="form-row">
-          <div class="form-group">
-            <label for="startDate">Başlangıç Tarihi ve Saati:</label>
-            <input type="datetime-local" id="startDate" [(ngModel)]="formData.baslangicTarihi" name="startDate">
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="position">Pozisyon:</label>
+                <select id="position" [(ngModel)]="formData.pozisyonId" name="position" class="form-control">
+                  <option [ngValue]="null">Seçiniz</option>
+                  <option *ngFor="let pos of positions" [ngValue]="pos.id">{{ pos.ad }}</option>
+                </select>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="department">Bölüm:</label>
+                <select id="department" [(ngModel)]="formData.bolumId" name="department" class="form-control">
+                  <option [ngValue]="null">Seçiniz</option>
+                  <option *ngFor="let bol of bolums" [ngValue]="bol.id">{{ bol.ad }}</option>
+                </select>
+              </div>
+            </div>
           </div>
-        
-          <div class="form-group">
-            <label for="endDate">Bitiş Tarihi ve Saati:</label>
-            <input type="datetime-local" id="endDate" [(ngModel)]="formData.bitisTarihi" name="endDate">
+          <div class="row mb-3">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="startDate">Başlangıç Tarihi ve Saati:</label>
+                <input type="datetime-local" id="startDate" [(ngModel)]="formData.baslangicTarihi" name="startDate"
+                  class="form-control">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="endDate">Bitiş Tarihi ve Saati:</label>
+                <input type="datetime-local" id="endDate" [(ngModel)]="formData.bitisTarihi" name="endDate"
+                  class="form-control">
+              </div>
+            </div>
           </div>
-        </div>
-        <button class="btn btn-primary w-100" type="submit">Kaydet</button>
-      </form>
+          <div class="d-flex justify-content-end mt-4">
+            <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">İptal</button>
+            <button class="btn btn-primary" type="submit">Kaydet</button>
+          </div>
+        </form>
+      </div>
     </div>
   </div>
 </div>
